--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,15 @@
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.18",
+    "eslint": "^9.27.0",
+    "globals": "^16.1.0",
     "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1"
   }
 }
