--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -26,6 +27,7 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.18",
+    "@types/cookie-parser": "^1.4.8",
     "eslint": "^9.27.0",
     "globals": "^16.1.0",
     "nodemon": "^3.1.10",
