--- a/server/package.json
+++ b/server/package.json
@@ -15,19 +15,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.18",
-    "@types/cookie-parser": "^1.4.8",
     "eslint": "^9.27.0",
     "globals": "^16.1.0",
     "nodemon": "^3.1.10",
